updated wemos post

--- a/_posts/2017-01-12-wemos.md
+++ b/_posts/2017-01-12-wemos.md
@@ -3,7 +3,7 @@ title: "WEMOS test"
 date: 2017-01-12
 ---
 
-Today the [WEMOS D1 mini pro](https://www.wemos.cc/product/d1-mini-pro.html) arrived and I made my first sketch for it. I just had to install the USB to UART [driver](https://www.silabs.com/products/mcu/Pages/USBtoUARTBridgeVCPDrivers.aspx) for it and it was ready to go. I was interested to try the over the air programming (OTA) and loading [Google Blockly](https://developers.google.com/blockly/) to it's on board SPI flash memory, so it can be served from it.
+Today the [WEMOS D1 mini pro](https://www.wemos.cc/product/d1-mini-pro.html) arrived. It's really easy to program it using the [Arduino IDE](https://www.arduino.cc/) or [PlatformIO](http://platformio.org/). Just install the USB to UART [driver](https://www.silabs.com/products/mcu/Pages/USBtoUARTBridgeVCPDrivers.aspx) for it and it is ready to go. For the sumorobot purpose it's interesting to try the over the air programming (OTA) and loading [Google Blockly](https://developers.google.com/blockly/) to it's on board SPI flash memory, so it can be served from the sumorobot.
 
 <figure>
   <img src="/assets/images/wemos.jpg" alt="sumorobots">
