--- a/_posts/2017-9-20-kits.md
+++ b/_posts/2017-9-20-kits.md
@@ -5,36 +5,22 @@ description: Learn to assemble and program
 image: assets/images/kit.jpg
 ---
 
-LED badge
+LED badges are portable companions that bring fun to everyday life. They can be programmed over USB or WiFi to show different animations and scroll words.
 
-LED badges are portable companions that bring fun to everyday life. They can be programmed to show different animations and scroll words.
+![badge](../../../assets/images/badge.jpg)
 
-<figure>
-  <img src="{{ site.url }}/assets/images/badge-off.jpg" alt="badge-off">
-  <figcaption>The LED badge is programmable via USB and WiFi</figcaption>
-</figure>
-<figure>
-  <img src="{{ site.url }}/assets/images/badge-on.jpg" alt="badge-on">
-  <figcaption>The LED badge showing an image</figcaption>
-</figure>
-
-The parts kit costs €40, it is meant for children of maker parents. Contact [kits@robokoding.com](#) to buy.
+The LED badge parts kit costs €40 and will be announced on [Tindie](https://www.tindie.com/stores/silbo/). Contact [kits@robokoding.com]() for more info.
 
 Sumorobots are an amazing way to learn the basics of programming and electronics in a fun and interactive way. Robot-sumo, or pepe-sumo, is a sport in which two robots attempt to push each other out of a circle (in a similar fashion to the sport of sumo). The robots used in this competition are called sumobots.
 
 The hardware and software of the sumorobot kit is open-source, you can find everything on [GitHub](https://github.com/robokoding) and don't forget to checkout the development [gallery](https://goo.gl/photos/vJf1QYrnvfJTh55V8). The sumorobot kit consists of all the necessary parts to build your own sumorobot.
 
-<figure>
-  <img src="{{ site.url }}/assets/images/kit.jpg" alt="kit">
-  <figcaption>Parts of the sumorobot kit</figcaption>
-</figure>
+![kit](../../../assets/images/kit.jpg)
 
 The sumorobot can be programmed over the browser using a graphical programming interface or Python code.
-<figure>
-  <img src="{{ site.url }}/assets/images/blockly.jpg" alt="blockly">
-  <figcaption>Sumorobot programming interface</figcaption>
-</figure>
 
-The parts kit costs €55, it is meant for children of maker parents. Contact [kits@robokoding.com](#) to buy.
+![blockly](../../../assets/images/blockly.jpg)
+
+The sumorobot parts kit costs €55 and will be announced on [Tindie](https://www.tindie.com/stores/silbo/). Contact [kits@robokoding.com]() for more info.
 
 Happy programming!
