change contact email

--- a/_posts/2017-9-20-kits.md
+++ b/_posts/2017-9-20-kits.md
@@ -9,7 +9,7 @@ LED badges are portable companions that bring fun to everyday life. They can be 
 
 ![badge](../../../assets/images/badge.jpg)
 
-The LED badge parts kit costs €40 and will be announced on [Tindie](https://www.tindie.com/stores/silbo/). Contact [kits@robokoding.com]() for more info.
+The LED badge parts kit costs €40 and will be announced on [Tindie](https://www.tindie.com/stores/silbo/). Contact [info@robokoding.com]() for more info.
 
 Sumorobots are an amazing way to learn the basics of programming and electronics in a fun and interactive way. Robot-sumo, or pepe-sumo, is a sport in which two robots attempt to push each other out of a circle (in a similar fashion to the sport of sumo). The robots used in this competition are called sumobots.
 
@@ -21,6 +21,6 @@ The sumorobot can be programmed over the browser using a graphical programming i
 
 ![blockly](../../../assets/images/blockly.jpg)
 
-The sumorobot parts kit costs €55 and will be announced on [Tindie](https://www.tindie.com/stores/silbo/). Contact [kits@robokoding.com]() for more info.
+The sumorobot parts kit costs €55 and will be announced on [Tindie](https://www.tindie.com/stores/silbo/). Contact [info@robokoding.com]() for more info.
 
 Happy programming!
