--- a/_pages/kits/sumohardware/021.md
+++ b/_pages/kits/sumohardware/021.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: SumoHardware v0.2.1
-permalink: "/kits/sumorobot/sumohardware/0.2.1"
+permalink: "/kits/sumorobot/sumohardware/021"
 ---
 
 ## Assembly instructions
