--- a/_pages/kits/sumohardware/v031.md
+++ b/_pages/kits/sumohardware/v031.md
@@ -6,6 +6,14 @@ permalink: "/kits/sumorobot/sumohardware/v031"
 
 ## Assembly instructions
 
+Dear SumoRobot Maker,
+
+Thank you for purchising the SumoRobot kit. We are sure that you will have a lot of fun! 
+We sincerely hope that this experience will be a stepping stone towards further learning, making and tinkering.
+We would love to share your experience with other fellow makers. It would be awesome if you could send us a video, a photo or drop us a line about your assembly experience.
+
+You are about to assemble your very own SumoRobot. In front of you is the SumoRobot kit, consisted of 33 carefully selected parts and a custom design PCB. Make sure you have all the equipment needed - a working surface, a soldering iron and soldering wire, and pliers. Now you're all set to go and follow our step-by-step assembly guide.
+
 **1. Solder the resistors**
 
 Flip the SumoBoard on it's backside.
