--- a/_pages/kits/sumohardware/v021.md
+++ b/_pages/kits/sumohardware/v021.md
@@ -16,9 +16,7 @@ R8, R9 = 0.1 ohm (big blue resistors)
 R1, R4, R5, R6, R7, = 100 ohm (small light grey resistors)
 R10, R11 = 100K ohm (small blue resistors)
 
-It is probably easiest to place the resistors and solder them one by one. Bend the resistor legs 90 degrees and place them trough the SumoBoard. The resistors don't have polarity, you can place them any way you want.
-
-BUG: The holes for the big blue resistors are a bit too close together.
+It is probably easiest to place the resistors and solder them one by one. Bend the resistor legs 90 degrees and place them trough the SumoBoard. The resistors don't have polarity, you can place them any way you want. The holes for the big blue resistors are a bit too close together.
 
 ![sumoboard](https://cdn.hackaday.io/images/6623771522068600114.jpg){:width="50%"}
 
@@ -34,7 +32,7 @@ TIP: For best soldering results preheat the resistor leg and the pad with the ti
 
 **2. Solder the capacitors**
 
-The 2 green cylinders are the capacitors. On one side of the capacitor body there is a yellow/brown side with stripes. The capacitor leg with the striped side goes into the SumoBoard hole which is surrounded by a white half circle under the C1 and C2 labels. Try to leave some space between the SumoBoard and the capacitor. So that the capacitor doesn't touch the SumoBoard. This makes one of the next steps easier. This is a bug and will be fixed in the next hardware version. See images below for 2 options how to place the capacitors.
+The 2 green cylinders are the capacitors. On one side of the capacitor body there is a yellow/brown side with stripes. The capacitor leg with the striped side goes into the SumoBoard hole which is surrounded by a white half circle under the C1 and C2 labels. Try to leave some space between the SumoBoard and the capacitor. So that the capacitor doesn't touch the SumoBoard. This makes one of the next steps easier. See images below for 2 options how to place the capacitors.
 
 ![sumoboard](/assets/img/sumoboard_vertical_capacitor.jpg){:width="49%"}
 ![sumoboard](/assets/img/sumoboard_horizontal_capacitor.jpg){:width="49%"}
