--- a/_pages/kits/sumohardware/v031.md
+++ b/_pages/kits/sumohardware/v031.md
@@ -6,29 +6,26 @@ permalink: "/kits/sumorobot/sumohardware/v031"
 
 ## Assembly instructions
 
-Dear SumoRobot Maker,
+### 1. Break apart the PCB
 
-Thank you for purchising the SumoRobot kit. We are sure that you will have a lot of fun! 
-We sincerely hope that this experience will be a stepping stone towards further learning, making and tinkering.
-We would love to share your experience with other fellow makers. It would be awesome if you could send us a video, a photo or drop us a line about your assembly experience.
+Break apart the PCB with pliers as shown below. Additionally you can clean the sharp edges of the breakpoints with a file, scissors or wire cutters.
 
-You are about to assemble your very own SumoRobot. In front of you is the SumoRobot kit, consisted of 33 carefully selected parts and a custom design PCB. Make sure you have all the equipment needed - a working surface, a soldering iron and soldering wire, and pliers. Now you're all set to go and follow our step-by-step assembly guide.
+![sumoboard](/assets/img/v031/step_1.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step_1_1.jpg){:width="49%"}
 
-**1. Solder the resistors**
+### 2. Solder the resistors
 
 Flip the SumoBoard on it's backside.
 
-![sumoboard](https://cdn.hackaday.io/images/8219041522068469087.jpg){:width="50%"}
+R8, R9 = 0.1 ohm (big blue resistors)  
+R10, R11 = 100K ohm (small blue resistors)  
+R1, R4, R5, R6, R7, = 100 ohm (small light grey resistors)  
 
-R8, R9 = 0.1 ohm (big blue resistors)
-R1, R4, R5, R6, R7, = 100 ohm (small light grey resistors)
-R10, R11 = 100K ohm (small blue resistors)
+It is probably easiest to place the resistors and solder them one by one. Bend the resistor legs 90 degrees and place them trough the SumoBoard. The resistors don't have polarity, you can place them any way you want. The holes for the big blue resistors are a bit too close together.
 
-It is probably easiest to place the resistors and solder them one by one. Bend the resistor legs 90 degrees and place them trough the SumoBoard. The resistors don't have polarity, you can place them any way you want.
-
-BUG: The holes for the big blue resistors are a bit too close together.
-
-![sumoboard](https://cdn.hackaday.io/images/6623771522068600114.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/part2.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/part2_1.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/part2_2.jpg){:width="50%"}
 
 Once the resistor(s) is(are) in place, try to hold it in place with your finger (or keep the SumoBoard pushed against the table) and turn the SumoBoard around to solder the resistor from the other side and cut the remainder of the resistor legs.
 
