--- a/_pages/kits/sumohardware/v031.md
+++ b/_pages/kits/sumohardware/v031.md
@@ -23,9 +23,9 @@ R1, R4, R5, R6, R7, = 100 ohm (small light grey resistors)
 
 It is probably easiest to place the resistors and solder them one by one. Bend the resistor legs 90 degrees and place them trough the SumoBoard. The resistors don't have polarity, you can place them any way you want. The holes for the big blue resistors are a bit too close together.
 
-![sumoboard](/assets/img/v031/part2.jpg){:width="50%"}
-![sumoboard](/assets/img/v031/part2_1.jpg){:width="50%"}
-![sumoboard](/assets/img/v031/part2_2.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step2.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step2_1.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step2_2.jpg){:width="50%"}
 
 Once the resistor(s) is(are) in place, try to hold it in place with your finger (or keep the SumoBoard pushed against the table) and turn the SumoBoard around to solder the resistor from the other side and cut the remainder of the resistor legs.
 
