--- a/_pages/kits/sumohardware/v021.md
+++ b/_pages/kits/sumohardware/v021.md
@@ -12,9 +12,9 @@ Flip the SumoBoard on it's backside.
 
 ![sumoboard](https://cdn.hackaday.io/images/8219041522068469087.jpg){:width="50%"}
 
-R8, R9 = 0.1 ohm (big blue resistors)
+R8, R9 = 0.1 ohm (big blue resistors)  
+R10, R11 = 100K ohm (small blue resistors)  
 R1, R4, R5, R6, R7, = 100 ohm (small light grey resistors)
-R10, R11 = 100K ohm (small blue resistors)
 
 It is probably easiest to place the resistors and solder them one by one. Bend the resistor legs 90 degrees and place them trough the SumoBoard. The resistors don't have polarity, you can place them any way you want. The holes for the big blue resistors are a bit too close together.
 
@@ -37,13 +37,13 @@ The 2 green cylinders are the capacitors. On one side of the capacitor body ther
 ![sumoboard](/assets/img/sumoboard_vertical_capacitor.jpg){:width="49%"}
 ![sumoboard](/assets/img/sumoboard_horizontal_capacitor.jpg){:width="49%"}
 
-Finally however you placed the capacitors you can remove the zip ties.
+Finally however you placed the capacitors, now remove the zip ties.
 
 ![sumoboard](https://cdn.hackaday.io/images/9173631522070754725.jpg){:width="50%"}
 
-### 3. Solder the phototransistors
+### 3. Solder the line sensors
 
-The phototransistors are the dark blue and black LED combined with the black chassis. Here again the polarity is important, so mind the white drawing on the SumoBoard to see which way they go to the holes of D1, D2, D3, D4. The cut corners of the phototransistor black case go towards the edge of the SumoBoard, so that the dark blue LED is closer to the edge of the SumoBoard. When you have figured out which way they go then you have to bend the legs 90 degrees. Like seen on the image below.
+The line sensors are the dark blue LED and black phototransistor combined with the black chassis. Here again the polarity is important, so mind the white drawing on the SumoBoard to see which way they go to the holes of D1, D2, D3, D4. The cut corners of the phototransistor black case go towards the edge of the SumoBoard, so that the dark blue LED is closer to the edge of the SumoBoard. When you have figured out which way they go then you have to bend the legs 90 degrees. Like seen on the image below.
 
 ![sumoboard](/assets/img/sumoboard_line_sensor.jpg){:width="50%"}
 
