--- a/_pages/kits/sumohardware/v031.md
+++ b/_pages/kits/sumohardware/v031.md
@@ -6,91 +6,100 @@ permalink: "/kits/sumorobot/sumohardware/v031"
 
 ## Assembly instructions
 
-### 1. Break apart the PCB
+### 1. Break the PCB apart
 
-Break apart the PCB with pliers as shown below. Additionally you can clean the sharp edges of the breakpoints with a file, scissors or wire cutters.
+Start by taking the black board that has RoboKoding's logo on it. That is the PCB (meaning "printed circuit board") of the SumoRobot, where you will solder all the different components. If you look closer, you will notice tiny holes around the board. Those are the breakaway tabs that you need to separate into individual parts. Using pliers, carefully break off each part. After you separate all the parts, use a tool to smoothen the rough edges. You can use a wire cutter, scissors, a hand file or sand paper. 
 
 ![sumoboard](/assets/img/v031/step_1.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step_1_1.jpg){:width="49%"}
 
 ### 2. Solder the resistors
 
-Flip the SumoBoard on it's backside.
+There are 11 resistors in the kit: 2 big blue, 5 small beige and 4 small blue resistors - all of them with different colour codes indicating the resistance value. Flip the SumoBoard on its backside and place them according to the numbers shown below:
 
-R8, R9 = 0.1 ohm (big blue resistors)  
-R10, R11 = 100K ohm (small blue resistors)  
-R1, R4, R5, R6, R7, = 100 ohm (small light grey resistors)  
+Big blue resistors > R1, R2 = 0.1 ohm
+Small beige resistors > R3, R4, R5, R6, R7, = 100 ohm
+Small blue resistors > R10, R11 = 100K ohm 
+ 
+Bend the resistor legs 90 degrees and place them on the SumoBoard. You can place and solder them one by one, or all together.  They don't have polarity, which means that you can place them in any of orientation on the board. 
 
-It is probably easiest to place the resistors and solder them one by one. Bend the resistor legs 90 degrees and place them trough the SumoBoard. The resistors don't have polarity, you can place them any way you want. The holes for the big blue resistors are a bit too close together.
+![sumoboard](/assets/img/v031/step_2.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step_2_1.jpg){:width="50%"}
 
-![sumoboard](/assets/img/v031/step2.jpg){:width="50%"}
-![sumoboard](/assets/img/v031/step2_1.jpg){:width="50%"}
-![sumoboard](/assets/img/v031/step2_2.jpg){:width="50%"}
 
-Once the resistor(s) is(are) in place, try to hold it in place with your finger (or keep the SumoBoard pushed against the table) and turn the SumoBoard around to solder the resistor from the other side and cut the remainder of the resistor legs.
+Cut the remainder of the resistor's legs and keep the remainders on the side, for a later step.
 
-TIP: It's best to use some of the cut resistor legs and solder them to the solder jumpers for the plow. It will make the SumoRobot more durable in the end. Just solder them from one side, the other side will be soldered in a coming step.
+![sumoboard](/assets/img/v031/step_2_2.jpg){:width="50%"}
 
-![sumoboard](/assets/img/sumoboard_jumper_connections.jpg){:width="50%"}
+### 3. Solder the phototransistors
 
-TIP: For best soldering results preheat the resistor leg and the pad with the tip of the soldering iron few seconds before and then apply solder wire. Add enough solder wire to make a mountain around the resistor leg and then remove the solder wire and leave the solder iron tip for few seconds on the pad. Then remove the solder iron and you should have a nice shiny solder connection.
+Find the two phototransistors - these are the light sensors that help the SumoRobot detect the line on the SumoRing. They are polarized, therefore pay close attention to the white drawing on the SumoBoard. The drawing corresponds to the shape of the phototransistor, therefore showing you the right way to place it on the board.  Bend the legs 90 degrees, place them on the board (labels: D1, D2 and D3, D4) and then solder them.
 
-![sumoboard](https://cdn.hackaday.io/images/1152311522069574072.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step_3.jpg){:width="50%"}
 
-**2. Solder the capacitors**
+### 4. Solder the microcontroller
 
-The 2 green cylinders are the capacitors. On one side of the capacitor body there is a yellow/brown side with stripes. The capacitor leg with the striped side goes into the SumoBoard hole which is surrounded by a white half circle under the C1 and C2 labels. Try to leave some space between the SumoBoard and the capacitor. So that the capacitor doesn't touch the SumoBoard. This makes one of the next steps easier. This is a bug and will be fixed in the next hardware version. See images below for 2 options how to place the capacitors.
+For this step you need the microcontroller, the pair of male pin headers and the pair of female pin headers. Place the female pin headers on the markings J4 and J5 on the board. Afterwards put the male pin headers into the microcontroller and place them on the board, into the female pin headers. Then solder the male pin headers to the microcontroller and the female pin headers to the SumoBoard.
 
-![sumoboard](/assets/img/sumoboard_vertical_capacitor.jpg){:width="49%"}
-![sumoboard](/assets/img/sumoboard_horizontal_capacitor.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step_4.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step_4_1.jpg){:width="50%"}
 
-Finally however you placed the capacitors you can remove the zip ties.
+### 5. Solder the servo pin headers
 
-![sumoboard](https://cdn.hackaday.io/images/9173631522070754725.jpg){:width="50%"}
+The 2 pin headers for the Servos go to the holes with the labels LEFT_SERVO and RIGHT_SERVO. Place the pin header and solder one of its pins first. Then try to align the pin header while reheating the previously made solder connection.
 
-**3. Solder the phototransistors**
+![sumoboard](/assets/img/v031/step_5.jpg){:width="50%"}
 
-The phototransistors are the dark blue and black LED combined with the black chassis. Here again the polarity is important, so mind the white drawing on the SumoBoard to see which way they go to the holes of D1, D2, D3, D4. The cut corners of the phototransistor black case go towards the edge of the SumoBoard, so that the dark blue LED is closer to the edge of the SumoBoard. When you have figured out which way they go then you have to bend the legs 90 degrees. Like seen on the image below.
+### 6. Solder the capacitors
 
-![sumoboard](/assets/img/sumoboard_line_sensor.jpg){:width="50%"}
+The two green cylinders are the capacitors and they should be placed on the C1 and C2 markings. They have polarity, which means that you have to be careful how you place them on the board. On one side of the capacitor's body there is a grey stripe. The capacitor's leg from the striped side goes into the SumoBoard hole which is marked as a half circle filled with white colour. After you make sure you got the polarity right, solder the capacitors on the SumoBoard.
 
-Finally place and solder the phototransistors one by one.
+![sumoboard](/assets/img/v031/step6.jpg){:width="50%"}
 
-![sumoboard](https://cdn.hackaday.io/images/7325461522075884330.jpg){:width="50%"}
+### 7. Solder the plow
 
-**4. Solder the Servo pin headers**
+Find the plow and the two silver breakaway tabs from the first step. We will use those to connect the plow to the main board. After you attach everything together, apply solder on both sides of the board.
 
-The 2 pin headers for the Servos go to the holes with labels LEFT_SERVO and RIGHT_SERVO. Place the pin header and solder one of it's pins first. Then try to align the pin header while reheating the previously made solder connection.
+![sumoboard](/assets/img/v031/step7.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step7_1.jpg){:width="50%"}
 
-![sumoboard](https://cdn.hackaday.io/images/2512471522076273130.jpg){:width="50%"}
+Then, take the remainders of the resistors' legs from step 2. Place them in the holes on the board as shown on the image below. Solder them on both sides of the board, as well.
 
-**5. Solder the push button**
+![sumoboard](/assets/img/v031/step7_2.jpg){:width="50%"}
 
-Put the push button in the SW1 labeled holes. The polarity is important again, check the sides of the button, they should match with the drawing on the SumoBoard. There are 2 rectangles and a single rectangle drawn on the SumoBoard, they should match with the ones on the push button. See the images below.
+### 8. Solder the LEDs
 
-![sumoboard](/assets/img/sumoboard_switch.jpg){:width="50%"}
-![sumoboard](https://cdn.hackaday.io/images/9225151522081953208.jpg){:width="50%"}
+Find the three LEDs - one blue and two yellow. Place the yellow ones in the holes with labels D6 and D7, while the blue one in the hole marked as D5. Be aware of the polarity again. Take a closer look and notice how the specific shape of the LED corresponds to the drawing on the board. You should place the shorter leg of the LED into the hole with a rectangular pad of the SumoBoard. After you make sure the polarity has the right orientation on the board, solder the yellow LEDs. The blue LED is placed in a more specific way. After you place the shorter leg in the hole marked with a rectangular shape, push the longer leg through the space between the plow and the main board. Then, from underneath, place it through the hole with an oval pad on the SumoBoard.
 
-**6. Solder the LEDs**
+![sumoboard](/assets/img/v031/step8.jpg){:width="50%"}
 
-The D5 is the blue LED and D6 and D7 are yellow. Be aware of the polarity again. One side of the LED is cut a bit like marked on the SumoBoard. The shorter leg of the LED goes into the hole with a rectangular pad of the SumoBoard.
+### 9. Solder the ultrasonic sensor
 
-![sumoboard](https://cdn.hackaday.io/images/6695131522082345716.jpg){:width="50%"}
+Find the ultrasonic sensor. This one helps the robot to detect objects, i.e. "to see" the opponent on the SumoRing. Push it in the holes labeles as J1 on the board and solder it into place. 
 
-**7. Solder the microcontroller**
+![sumoboard](/assets/img/v031/step9.jpg){:width="50%"}
 
-Put the 13 pins long male pin headers into the microcontroller and also connect the 13 pin long sockets to it. Then solder the pin header to the microcontroller and the socket to the SumoBoard.
+### 10. Solder the power button
 
-![sumoboard](https://cdn.hackaday.io/images/2303671522082593859.jpg){:width="50%"}
+Put the power button in the SW1 labeled holes. Once again the polarity is important again - check the sides of the button, they should match with the drawing on the SumoBoard.
 
-**8. Solder the microcontroller power cable**
+![sumoboard](/assets/img/v031/step10.jpg){:width="50%"}
 
-Connect the power cable to the microcontroller and put the wires trough the hole under the microcontroller trough the SumoBoard small hole. Then bend them 180 degrees to go into the holes labeled WEMOS J5 and solder them into place.
+### 11.Prepare the wheels
 
-![sumoboard](https://cdn.hackaday.io/images/9365591522082881887.jpg){:width="50%"}
-![sumoboard](https://cdn.hackaday.io/images/798481522083083808.jpg){:width="50%"}
+The two wheels should be attached to the servo motors, so the robot can execute the movement commands. Find the two black screws from the bag and screw them to the wheels.
 
-**9. Place the Servomotors and the battery**
+![sumoboard](/assets/img/v031/step11.jpg){:width="50%"}
+
+### 12. Place the servo motors
+
+Place the servomotors on the SumoBoard, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the gear that sticks out from the motor should face towards the back of the robot. The Servomotors cables should go towards the back of the robot, where the open source hardware logo is. Afterwards, secure them with the two black breakaway tabs from the first step. Insert the screws from up, the bolts from down and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
+
+![sumoboard](/assets/img/v031/step12.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step12_1.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step12_2.jpg){:width="50%"}
+
+### 13. Connect the battery
 
 First cut the power cable into half. Leave around 5.5cm on the connector side and 6.5cm on the other side. See the image below.
 
@@ -100,11 +109,7 @@ Then trim of the isolation from the cable ends and add some solder to them. Next
 
 ![sumoboard](/assets/img/sumoboard_battery_wire_soldering.jpg){:width="50%"}
 
-Then try to put the zip ties into the holes, above and below the LEFT_SERVO and RIGHT_SERVO rectangular markings. The zip ties are supposed to go diagonally across the Servomotors. Put the zip ties loosely just enough to lock them in place. The zip tie should go a little under the capacitors under the robot if possible.
-
-After that place the Servomotors on SumoBoard on top of the labels LEFT_SERVO and RIGHT_SERVO. The gear that sticks out from the motor goes towards outside of the SumoBoard. The Servomotors cables should go towards the back of the robot, where the open source hardware logo is. Once the Servomotors are in place, put the battery on top of them so that the red wire is closer to the push button and then pull tight the zip ties and cut them.
-
-Wrap the Servomotor cable around the zip ties so it doesn't float around. Plug in the Servomotor cables according to the LEFT_SERVO and RIGHT_SERVO pin header connectors, the brown cable facing right if looking from the read of the robot. Brown cable facing the GND label on the SumoBoard.
+Put the battery on top of the servo motors, so that the red wire is closer to the push button and then pull tight the zip ties and cut them.
 
 Finally place the red and black wire from the battery from top trough the SumoBoard holes to connect them to J7 and J8. Bend the cables into the holes and solder them.
 
@@ -114,28 +119,11 @@ TIP: Be careful that the power button SW1, which was soldered earlier, is turned
 ![sumoboard](https://cdn.hackaday.io/images/4944121522083150598.jpg){:width="50%"}
 ![sumoboard](https://cdn.hackaday.io/images/4781671522083150796.jpg){:width="50%"}
 
-**10. Solder the plow**
-
-Break off the plow part of the SumoBoard and clean the mouse bites with pliers. Then find the brackets and unscrew the bolts from them. Place the brackets under the SumoRobot to connect the plow and the 2 parts of the SumoBoard.
-
-![sumoboard](https://cdn.hackaday.io/images/5494291522086944981.jpg){:width="50%"}
-
-Put in the bolts and screw them together with the nuts tight so that the pads underneath the SumoRobot stay aligned and as close to each other as possible. Then solder the connection points under the SumoRobot. Make sure the soldered connection points don't touch the metal brackets.
-
-![sumoboard](https://cdn.hackaday.io/images/6800101522086945116.jpg){:width="50%"}
-![sumoboard](https://cdn.hackaday.io/images/6970131522086945466.jpg){:width="50%"}
-
-**11. Solder the ultrasonic sensor**
-
-Remove the microcontroller from the bottom of the robot and place the ultrasonic sensor in the holes labeled J3. Push in the ultrasonic sensor until it touches the heads of the bolts and solder it into place. Finally find the black screws in the bags where the motors were. Place the wheels and screw the black screws to fixate the wheels.
-
-![sumoboard](https://cdn.hackaday.io/images/79381522087248734.jpg){:width="50%"}
-
 ## Usage instructions
 
-To turn ON the SumoRobot press the blue push button down. To turn the SumoRobot OFF, push the button again. In the ON state the blue push part of the button extends less from the button than in the OFF state as marked on the SumoBoard.
+To turn ON the SumoRobot push the power button towards right (ON). To turn the SumoRobot OFF, push it to the left (OFF).
 
-For charging the SumoRobot it has to be turned ON. Once you plug the micro USB into the SumoRobot's microcontroller. It will light up the red charging LED and the microcontroller will go to sleep (turn OFF LED lights). Once the battery is full the red LED light will turn OFF.
+In order to charge it, the SumoRobot has to be turned ON. Once you plug the micro USB into the SumoRobot's microcontroller, the red charging LED will light up and the microcontroller will go to sleep (turn OFF LED lights). Once the battery is full the red LED light will turn off.
 
 Connecting to WiFi is possible using the [SumoManager](/kits/sumorobot/sumomanager) app. The blue LED under the SumoRobot will blink when it's trying to connect to the WiFi network. Once connected to WiFi the blue LED will be steady ON.
 
