--- a/_pages/kits/sumohardware/v031.md
+++ b/_pages/kits/sumohardware/v031.md
@@ -17,14 +17,14 @@ Start by taking the black board that has RoboKoding's logo on it. That is the PC
 
 There are 11 resistors in the kit: 2 big blue, 5 small beige and 4 small blue resistors - all of them with different colour codes indicating the resistance value. Flip the SumoBoard on its backside and place them according to the numbers shown below:
 
-Big blue resistors > R1, R2 = 0.1 ohm
-Small beige resistors > R3, R4, R5, R6, R7, = 100 ohm
-Small blue resistors > R10, R11 = 100K ohm 
- 
+Big blue resistors > R1, R2 = 0.1 ohm  
+Small beige resistors > R3, R4, R5, R6, R7 = 100 ohm  
+Small blue resistors > R8, R9, R10, R11 = 100K ohm
+
 Bend the resistor legs 90 degrees and place them on the SumoBoard. You can place and solder them one by one, or all together.  They don't have polarity, which means that you can place them in any of orientation on the board. 
 
-![sumoboard](/assets/img/v031/step_2.jpg){:width="50%"}
-![sumoboard](/assets/img/v031/step_2_1.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step_2.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step_2_1.jpg){:width="49%"}
 
 
 Cut the remainder of the resistor's legs and keep the remainders on the side, for a later step.
@@ -41,12 +41,12 @@ Find the two phototransistors - these are the light sensors that help the SumoRo
 
 For this step you need the microcontroller, the pair of male pin headers and the pair of female pin headers. Place the female pin headers on the markings J4 and J5 on the board. Afterwards put the male pin headers into the microcontroller and place them on the board, into the female pin headers. Then solder the male pin headers to the microcontroller and the female pin headers to the SumoBoard.
 
-![sumoboard](/assets/img/v031/step_4.jpg){:width="50%"}
-![sumoboard](/assets/img/v031/step_4_1.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step_4.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step_4_1.jpg){:width="49%"}
 
 ### 5. Solder the servo pin headers
 
-The 2 pin headers for the Servos go to the holes with the labels LEFT_SERVO and RIGHT_SERVO. Place the pin header and solder one of its pins first. Then try to align the pin header while reheating the previously made solder connection.
+The 2 pin headers for the Servos go to the holes with the labels LEFT_SERVO and RIGHT_SERVO. Place the pin header and solder one of its pins first. Then try to align the pin header 90 degrees with the SumoBoard while reheating the previously made solder connection and pressing it from the other side.
 
 ![sumoboard](/assets/img/v031/step_5.jpg){:width="50%"}
 
@@ -60,8 +60,8 @@ The two green cylinders are the capacitors and they should be placed on the C1 a
 
 Find the plow and the two silver breakaway tabs from the first step. We will use those to connect the plow to the main board. After you attach everything together, apply solder on both sides of the board.
 
-![sumoboard](/assets/img/v031/step7.jpg){:width="50%"}
-![sumoboard](/assets/img/v031/step7_1.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step7.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step7_1.jpg){:width="49%"}
 
 Then, take the remainders of the resistors' legs from step 2. Place them in the holes on the board as shown on the image below. Solder them on both sides of the board, as well.
 
