--- a/_pages/kits/sumohardware/v02X.md
+++ b/_pages/kits/sumohardware/v02X.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: SumoHardware v0.2.1
-permalink: "/kits/sumorobot/sumohardware/v021"
+title: SumoHardware v0.2.X
+permalink: "/kits/sumorobot/sumohardware/v02X"
 ---
 
 ## Assembly instructions
