--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: SumoHardware v0.3.1
-permalink: "/kits/sumorobot/sumohardware/v031"
+title: SumoHardware v0.3.X
+permalink: "/kits/sumorobot/sumohardware/v03X"
 ---
 
 ## Assembly instructions
