--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -101,29 +101,34 @@ Place the servomotors on the SumoBoard, on top of the labels LEFT_SERVO and RIGH
 
 ### 13. Connect the battery
 
-First cut the power cable into half. Leave around 5.5cm on the connector side and 6.5cm on the other side. See the image below.
+First pull apart the black and red power cable. Then peal off some isolation from the cable ends.
 
-![sumoboard](/assets/img/sumoboard_battery_wire_cutting.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step13){:width="49%"}
+![sumoboard](/assets/img/v031/step13_1){:width="49%"}
 
-Then trim of the isolation from the cable ends and add some solder to them. Next prepare the battery, add some solder to the negative pad and to the positive. You have to peal of the isolation on the positive pad, the transparent one. Then solder the black wire to the golden negative plate and the positive to the silver looking positive strip. Keep in mind that heating the battery too much is not good, so it's best to solder the wires quickly. See the image below.
+Next apply some solder to the ends of the cables and to the positive and negative pole on the battery. To apply solder on the positive end of the battery you need to burn off the isolation a bit. Keep in mind that heating up the battery too much is not good, so it's best to solder the wires quickly.
 
-![sumoboard](/assets/img/sumoboard_battery_wire_soldering.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step13_2){:width="49%"}
+![sumoboard](/assets/img/v031/step13_3){:width="49%"}
 
-Put the battery on top of the servo motors, so that the red wire is closer to the push button and then pull tight the zip ties and cut them.
+The solder the cables to the positive and nagative side of the battery.
 
-Finally place the red and black wire from the battery from top trough the SumoBoard holes to connect them to J7 and J8. Bend the cables into the holes and solder them.
+![sumoboard](/assets/img/v031/step13_4){:width="50%"}
 
-TIP: Be careful that the power button SW1, which was soldered earlier, is turned OFF. The push buttons blue push part (the part that is moving) should extend out more in the OFF position than in the ON position as drawn on the SumoBoard.
+Fasten the battery on top of the servo motors with zip ties or rubber bands, either that was supplied with the kit. Finally place the red and black wire from the battery from top trough the SumoBoard holes to connect them to J6 and J7. Bend the cables into the holes and solder them.
 
-![sumoboard](https://cdn.hackaday.io/images/3692241522083150433.jpg){:width="50%"}
-![sumoboard](https://cdn.hackaday.io/images/4944121522083150598.jpg){:width="50%"}
-![sumoboard](https://cdn.hackaday.io/images/4781671522083150796.jpg){:width="50%"}
+![sumoboard](/assets/img/v031/step13_5){:width="49%"}
+![sumoboard](/assets/img/v031/step13_6){:width="49%"}
+
+TIP: Be careful that the power button SW1, which was soldered earlier, is turned OFF. The slide switch should be on the left, OFF position.
+
+![sumoboard](/assets/img/v031/final.jpg){:width="50%"}
 
 ## Usage instructions
 
-To turn ON the SumoRobot push the power button towards right (ON). To turn the SumoRobot OFF, push it to the left (OFF).
+To turn ON the SumoRobot slide the big power switch to the right (ON). To turn the SumoRobot OFF, slide the big power switch to the left (OFF).
 
-In order to charge it, the SumoRobot has to be turned ON. Once you plug the micro USB into the SumoRobot's microcontroller, the red charging LED will light up and the microcontroller will go to sleep (turn OFF LED lights). Once the battery is full the red LED light will turn off.
+In order to charge the SumoRobot, plug the micro USB into the SumoRobot's microcontroller. The red charging LED will light up. The SumoRobot can be charged in both ON and OFF state. Once the battery is full the red LED light will turn OFF.
 
 Connecting to WiFi is possible using the [SumoManager](/kits/sumorobot/sumomanager) app. The blue LED under the SumoRobot will blink when it's trying to connect to the WiFi network. Once connected to WiFi the blue LED will be steady ON.
 
