--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -103,22 +103,22 @@ Place the servomotors on the SumoBoard, on top of the labels LEFT_SERVO and RIGH
 
 First pull apart the black and red power cable. Then peal off some isolation from the cable ends.
 
-![sumoboard](/assets/img/v031/step13){:width="49%"}
-![sumoboard](/assets/img/v031/step13_1){:width="49%"}
+![sumoboard](/assets/img/v031/step13.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step13_1.jpg){:width="49%"}
 
 Next apply some solder to the ends of the cables and to the positive and negative pole on the battery. To apply solder on the positive end of the battery you need to burn off the isolation a bit. Keep in mind that heating up the battery too much is not good, so it's best to solder the wires quickly.
 
-![sumoboard](/assets/img/v031/step13_2){:width="49%"}
-![sumoboard](/assets/img/v031/step13_3){:width="49%"}
+![sumoboard](/assets/img/v031/step13_2.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step13_3.jpg){:width="49%"}
 
 The solder the cables to the positive and nagative side of the battery.
 
-![sumoboard](/assets/img/v031/step13_4){:width="50%"}
+![sumoboard](/assets/img/v031/step13_4.jpg){:width="50%"}
 
 Fasten the battery on top of the servo motors with zip ties or rubber bands, either that was supplied with the kit. Finally place the red and black wire from the battery from top trough the SumoBoard holes to connect them to J6 and J7. Bend the cables into the holes and solder them.
 
-![sumoboard](/assets/img/v031/step13_5){:width="49%"}
-![sumoboard](/assets/img/v031/step13_6){:width="49%"}
+![sumoboard](/assets/img/v031/step13_5.jpg){:width="49%"}
+![sumoboard](/assets/img/v031/step13_6.jpg){:width="49%"}
 
 TIP: Be careful that the power button SW1, which was soldered earlier, is turned OFF. The slide switch should be on the left, OFF position.
 
