--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -46,7 +46,9 @@ For this step you need the microcontroller, the pair of male pin headers and the
 
 ### 5. Solder the servo pin headers
 
-The 2 pin headers for the Servos go to the holes with the labels LEFT_SERVO and RIGHT_SERVO. Place the pin header and solder one of its pins first. Then try to align the pin header 90 degrees with the SumoBoard while reheating the previously made solder connection and pressing it from the other side.
+IMPORTANT! Check closely where you place the pin headers. On the other side of the SumoBoard there are other holes where it also fits.
+
+The 2 pin headers for the servomotors go to the holes with the labels LEFT_SERVO (J2) and RIGHT_SERVO (J3). Place the pin header and solder one of its pins first. Then try to align the pin header 90 degrees with the SumoBoard while reheating the previously made solder connection and pressing it from the other side.
 
 ![sumoboard](/assets/img/v031/step_5.jpg){:width="49%"}
 
@@ -101,7 +103,7 @@ The two wheels should be attached to the servo motors, so the robot can execute 
 
 ### 12. Place the servo motors
 
-Place the servomotors on the SumoBoard, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the gear that sticks out from the motor should face towards the back of the robot. The Servomotors cables should go towards the back of the robot, where the open source hardware logo is. Afterwards, secure them with the two black breakaway tabs from the first step. Insert the screws from up, the bolts from down and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
+Place the servomotors on the SumoBoard, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the gear that sticks out from the motor should face towards the back of the robot. The servomotors cables should go towards the back of the robot, where the open source hardware logo is. Afterwards, secure them with the two black breakaway tabs from the first step. Insert the screws from up, the bolts from down and then screw them together. When this is done, you can put the cables under the microcontroller, as shown in the pictures below.
 
 ![sumoboard](/assets/img/v031/step12.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step12_1.jpg){:width="49%"}
