--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -44,7 +44,7 @@ For this step you need the microcontroller, the pair of male pin headers and the
 ![sumoboard](/assets/img/v031/step_4.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step_4_1.jpg){:width="49%"}
 
-### 5. Solder the servo pin headers
+### 5. Solder the servomotor pin headers
 
 IMPORTANT! Check closely where you place the pin headers. On the other side of the SumoBoard there are other holes where it also fits.
 
@@ -97,7 +97,7 @@ When you have the SumoBoard v0.3 then you also have to do the following step. Ad
 
 ### 11.Prepare the wheels
 
-The two wheels should be attached to the servo motors, so the robot can execute the movement commands. Find the two black screws from the bag and screw them to the wheels.
+The two wheels should be attached to the servomotors, so the robot can execute the movement commands. Find the two black screws from the bag and screw them to the wheels.
 
 ![sumoboard](/assets/img/v031/step11.jpg){:width="49%"}
 
@@ -125,7 +125,7 @@ After that, solder the cables to the positive and nagative side of the battery.
 
 ![sumoboard](/assets/img/v031/step13_4.jpg){:width="49%"}
 
-Fasten the battery on top of the servo motors with zip ties or rubber bands, either which was supplied with the kit. Finally place the red and black wire from the battery from top trough the SumoBoard holes to connect them to J6 and J7. Bend the cables into the holes and solder them. J7 can be in a different location, depending on the exact version of SumoBoard you have.
+Fasten the battery on top of the servomotors with zip ties or rubber bands, either which was supplied with the kit. Finally place the red and black wire from the battery from top trough the SumoBoard holes to connect them to J6 and J7. Bend the cables into the holes and solder them. J7 can be in a different location, depending on the exact version of SumoBoard you have.
 
 ![sumoboard](/assets/img/v031/step13_5.jpg){:width="49%"}
 ![sumoboard](/assets/img/v031/step13_6.jpg){:width="49%"}
