--- a/_pages/kits/sumohardware/v03X.md
+++ b/_pages/kits/sumohardware/v03X.md
@@ -81,7 +81,7 @@ Find the ultrasonic sensor. This one helps the robot to detect objects, i.e. "to
 
 ![sumoboard](/assets/img/v031/step9.jpg){:width="49%"}
 
-When you have the SumoBoard v0.3 then you also have to do the following step. Solder 2 cables to connect the following pins.
+IMPORTANT! Do this only if you have the SumoBoard v0.3. Solder 2 cables to connect the following pins.
 
 ![sumoboard](/assets/img/v031/step9_1.jpg){:width="49%"}
 
@@ -91,7 +91,7 @@ Put the power button in the SW1 labeled holes. Once again the polarity is import
 
 ![sumoboard](/assets/img/v031/step10.jpg){:width="49%"}
 
-When you have the SumoBoard v0.3 then you also have to do the following step. Add more solder to connect the lower right 2 pins together.
+IMPORTANT! Do this only when you have the SumoBoard v0.3. Add more solder to connect the lower right 2 pins together.
 
 ![sumoboard](/assets/img/v031/step10_1.jpg){:width="49%"}
 
